# RAG-Based-Chatbot-with-Streamlit

./: LICENSE  README.markdown  README.md  chatbot.py  pyproject.toml
.github/workflows/: ci.yml
docqa/: __init__.py  cli.py  core.py
vectorstore/: index.faiss  index.pkl
